Fix z-index in menu, add padding to highlight right

--- a/app/assets/stylesheets/base/serie_highlight.scss
+++ b/app/assets/stylesheets/base/serie_highlight.scss
@@ -16,6 +16,10 @@ div.serie-left {
   padding: 20px;
 }
 
+div.serie-right {
+  padding-right: 30px;
+}
+
 img.serie-artwork {
   cursor: pointer;
   width: 400px;
